@@ -1,3 +1,8 @@
+2005-10-09  John ff  <jpff@codemist.co.uk>
+
+	* Opcodes/psynth.c (psynth2_init, psynth_init): Added cast to
+	unsigned to avoid compiler warnings
+
 2005-10-07	Anthony Kozar	<anthonykozar@sbcglobal.net>
 	* H/csound.h, H/csoundCore.h,
 	  Top/csound.c, Engine/musmon.c:  Added new API function
